Adicionando funcionalidade de reiniciar e consertando bug